--- a/tests/roam-files/tags/tag.org
+++ b/tests/roam-files/tags/tag.org
@@ -1,4 +1,5 @@
 #+roam_tags: "t1" "t2 with space" t3
+#+roam_tags: "t4 second-line"
 #+title: Tags
 
 This file is used to test functionality for =(org-roam--extract-tags)=
